fixed portrait spacing

--- a/instagram_post/src/components/Slideshow/Slideshow.css
+++ b/instagram_post/src/components/Slideshow/Slideshow.css
@@ -38,6 +38,7 @@
   margin-right: -30px;
   border-right: 0;
   border-top: 0;
+  transform: translate(40px, 0px);
 }
 .react-slideshow-container .nav:first-of-type span {
   margin-left: 5px;
@@ -46,6 +47,7 @@
 }
 .react-slideshow-container .nav:last-of-type {
   margin-left: -30px;
+  transform: translate(-50px, 0px);
 }
 .react-slideshow-container .nav:last-of-type span {
   margin-right: 5px;
@@ -58,6 +60,7 @@
   justify-content: center;
   /* top: 20px; */
   margin-left: -8px;
+  transform: translate(0px, -20px);
 }
 .react-slideshow-container + div.indicators > .each-slideshow-indicator {
   width: 7px;
